--- a/layouts/partials/home_widgets.html
+++ b/layouts/partials/home_widgets.html
@@ -1,20 +1,29 @@
-{{- $lang := .Lang | default "ko" -}} {{- $home := site.GetPage (printf
-"/%s/home" $lang) -}}
+{{- $lang := .Lang | default "ko" -}}
+{{- $home := site.GetPage (printf "/%s/home" $lang) -}}
 
 <section class="container mx-auto px-6">
   {{- if not $home -}}
-  <div class="text-red-600 py-12">
-    content/{{ $lang }}/home/index.md 를 찾을 수 없어요.
-  </div>
-  {{- else -}} {{/* 2) home 폴더 안의 위젯 파일들 모으기 (widget 파라미터가 있는
-  .md) */}} {{- $widgets := where $home.Pages "Params.widget" "!=" nil | default
-  (slice) -}} {{- if eq (len $widgets) 0 -}}
-  <div class="text-red-600 py-12">home 폴더에 위젯(.md) 파일이 없습니다.</div>
-  {{- else -}} {{/* 3) weight 순 정렬 (없으면 100) */}} {{- $sorted := sort
-  $widgets "Params.weight" "asc" -}} {{- range $p := $sorted -}} {{- $w := lower
-  (print $p.Params.widget) -}} {{- $partial := printf "widgets/%s.html" $w -}}
-  {{- if templates.Exists (printf "partials/%s" $partial) -}} {{ partial
-  $partial (dict "page" . "widget" $p) }} {{- else -}}
-  <div class="py-8 text-amber-600">알 수 없는 위젯: {{ $w }}</div>
-  {{- end -}} {{- end -}} {{- end -}} {{- end -}}
+    <div class="text-red-600 py-12">content/{{ $lang }}/home/index.md 를 찾을 수 없습니다.</div>
+  {{- else -}}
+    {{/* leaf 번들에서는 자식 .md가 Pages가 아니라 Resources 입니다. */}}
+    {{- $all := $home.Resources.Match "**.md" | default (slice) -}}
+    {{- /* index.md 제외하고 widget 파라미터 있는 파일만 */}}
+    {{- $widgets := where (where $all "File.BaseFileName" "!=" "index") "Params.widget" "!=" nil | default (slice) -}}
+
+    {{- if eq (len $widgets) 0 -}}
+      <div class="text-red-600 py-12">home 폴더에 위젯(.md) 파일이 없습니다.</div>
+    {{- else -}}
+      {{- /* weight 순 정렬 (없으면 100 취급) */}}
+      {{- $sorted := sort $widgets "Params.weight" "asc" -}}
+      {{- range $p := $sorted -}}
+        {{- $w := lower (printf "%v" (index $p.Params "widget")) -}}
+        {{- $partial := printf "widgets/%s.html" $w -}}
+        {{- if templates.Exists (printf "partials/%s" $partial) -}}
+          {{ partial $partial (dict "page" . "widget" $p) }}
+        {{- else -}}
+          <div class="py-8 text-amber-600">알 수 없는 위젯: {{ $w }}</div>
+        {{- end -}}
+      {{- end -}}
+    {{- end -}}
+  {{- end -}}
 </section>
